Fix issues of the Picture-in-Picture API under stress tests https://bugs.webkit.org/show_bug.cgi?id=212191

Reviewed by Eric Carlson.

Source/WebCore:

The current implementation of the Picture-in-Picture API is not robust under stress tests.
Changing the video presentation mode of a video element between inline and picture-in-picture
continuously may corrupt the internal states of the video element.

This patch refactors the approach to tracking the progress of video presentation mode changes
and make sure no new requestPictureInPicture() or exitPictureInPicture() will trigger
a presentation mode change unless the previous operations are completed.

This patch also removes the code for testing purposes in the HTMLVideoElement class.

Covered by existing tests.

* html/HTMLMediaElement.h:
* html/HTMLVideoElement.cpp:
(WebCore::toPresentationMode):
(WebCore::HTMLVideoElement::setFullscreenMode):
(WebCore::HTMLVideoElement::fullscreenModeChanged):
(WebCore::HTMLVideoElement::didEnterFullscreen):
(WebCore::HTMLVideoElement::didExitFullscreen):
(WebCore::HTMLVideoElement::setPictureInPictureObserver):
(WebCore::HTMLVideoElement::setVideoFullscreenFrame):
(WebCore::HTMLVideoElement::didBecomeFullscreenElement): Deleted.
(WebCore::HTMLVideoElement::setPictureInPictureAPITestEnabled): Deleted.
* html/HTMLVideoElement.h:

* testing/Internals.cpp:
(WebCore::Internals::setPictureInPictureAPITestEnabled): Deleted.
* testing/Internals.h:
* testing/Internals.idl:
Remove setPictureInPictureAPITestEnabled().

Source/WebKit:

* UIProcess/Cocoa/VideoFullscreenManagerProxy.mm:
(WebKit::VideoFullscreenManagerProxy::enterFullscreen):
Mock the behavior of the VideoFullscreenInterface[AVKit|Mac] regarding
the Picture-in-Picture mode support.

* WebProcess/cocoa/VideoFullscreenManager.mm:
(WebKit::VideoFullscreenManager::didEnterFullscreen):
(WebKit::VideoFullscreenManager::didCleanupFullscreen):
Add callbacks for the end of entering/exiting fullscreen.

LayoutTests:

Refactor the layout tests for the Picture-in-Picture API with the Mock VideoPresentation Mode.

* media/picture-in-picture/picture-in-picture-api-css-selector-expected.txt:
* media/picture-in-picture/picture-in-picture-api-css-selector.html:
* media/picture-in-picture/picture-in-picture-api-enter-pip-1-expected.txt:
* media/picture-in-picture/picture-in-picture-api-enter-pip-1.html:
* media/picture-in-picture/picture-in-picture-api-enter-pip-2-expected.txt:
* media/picture-in-picture/picture-in-picture-api-enter-pip-2.html:
* media/picture-in-picture/picture-in-picture-api-enter-pip-3-expected.txt:
* media/picture-in-picture/picture-in-picture-api-enter-pip-3.html:
* media/picture-in-picture/picture-in-picture-api-enter-pip-4-expected.txt:
* media/picture-in-picture/picture-in-picture-api-enter-pip-4.html:
* media/picture-in-picture/picture-in-picture-api-events-expected.txt:
* media/picture-in-picture/picture-in-picture-api-events.html:
* media/picture-in-picture/picture-in-picture-api-exit-pip-1-expected.txt:
* media/picture-in-picture/picture-in-picture-api-exit-pip-1.html:
* media/picture-in-picture/picture-in-picture-api-exit-pip-2-expected.txt:
* media/picture-in-picture/picture-in-picture-api-exit-pip-2.html:
* media/picture-in-picture/picture-in-picture-api-pip-window-expected.txt:
* media/picture-in-picture/picture-in-picture-api-pip-window.html:
* media/picture-in-picture/picture-in-picture-events-expected.txt:
* media/picture-in-picture/picture-in-picture-events.html:
* media/picture-in-picture/picture-in-picture-interruption-expected.txt:
* media/picture-in-picture/picture-in-picture-interruption.html:


Canonical link: https://commits.webkit.org/225106@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262038 268f45cc-cd09-0410-ab3c-d52691b4dbfc