Source/WebKit/WebProcess/cocoa/VideoFullscreenManager.mm
@@ -441,6 +441,8 @@ void VideoFullscreenManager::didEnterFullscreen(uint64_t contextId)
     if (!videoElement)
         return;
 
+    videoElement->didEnterFullscreen();
+
     dispatch_async(dispatch_get_main_queue(), [protectedThis = makeRefPtr(this), videoElement] {
         videoElement->didBecomeFullscreenElement();
     });
@@ -505,6 +507,8 @@ void VideoFullscreenManager::didCleanupFullscreen(uint64_t contextId)
 
     model->setVideoFullscreenLayer(nil);
     RefPtr<HTMLVideoElement> videoElement = model->videoElement();
+    if (videoElement)
+        videoElement->didExitFullscreen();
 
     interface->setFullscreenMode(HTMLMediaElementEnums::VideoFullscreenModeNone);
     interface->setFullscreenStandby(false);
